test/2-error/undefined-sym.ploy
main = <>->Int => {
  undefined
  0 }
